put a check in the feed to make sure account was accessible

--- a/force-app/main/default/classes/SummitEventsFeed.cls
+++ b/force-app/main/default/classes/SummitEventsFeed.cls
@@ -97,6 +97,12 @@ global with sharing class SummitEventsFeed {
 
     private static List<eventItem> getEventList() {
 
+        //Check if account is accessible
+        Boolean accountIsAccessible = false;
+        if (Schema.sObjectType.Account.isAccessible()) {
+            accountIsAccessible = true;
+        }
+
         List<eventItem> EventList = new List<eventItem>();
         RestRequest req = RestContext.request;
         String eventQuery = '';
@@ -105,7 +111,10 @@ global with sharing class SummitEventsFeed {
         eventQuery += ' Building_Override__c, Alternate_Registration_URL_Override__c, Location_Address_Override__c, Location_Map_Link_Override__c, Location_Title_Override__c, Location_Type_Override__c,  ';
         eventQuery += ' Event__r.Event_Short_Listing_Description__c, Event__r.Audience__c, Event__r.Close_Event_Days_Before__c, Event__r.Event_Sponsor__c, ';
         eventQuery += ' Event__r.Feed_Registration_Button_Text__c, Feed_Registration_Button_Text_Override__c, Capacity__c, Current_Available_Capacity__c, Private_Instance__c, Event__r.Private_Event__c, ';
-        eventQuery += ' Instance_Start_Date__c, Instance_End_Date__c, Instance_Start_Time__c, Instance_End_Time__c, Instance_Time_Zone__c, Event__r.Account__r.Name ';
+        eventQuery += ' Instance_Start_Date__c, Instance_End_Date__c, Instance_Start_Time__c, Instance_End_Time__c, Instance_Time_Zone__c ';
+        if (accountIsAccessible) {
+            eventQuery += ' , Event__r.Account__r.Name ';
+        }
         eventQuery += ' FROM Summit_Events_Instance__c ';
         eventQuery += ' WHERE ';
         eventQuery += ' Event__r.Event_Status__c = \'Active\' ';
@@ -227,15 +236,16 @@ global with sharing class SummitEventsFeed {
             eventQuery += ' AND (' + sanitizeOrLikeList(program, programFields) + ') ';
         }
 
+
         //School filter (can be comma separated)
         String school = req.params.get('school');
-        if (String.isNotBlank(school)) {
+        if (String.isNotBlank(school) && accountIsAccessible) {
             eventQuery += ' AND (' + sanitizeOrLikeList(school, 'Event__r.Account__r.Name') + ') ';
         }
 
         //School filter (can be comma separated)
         String accountName = req.params.get('account');
-        if (String.isNotBlank(accountName)) {
+        if (String.isNotBlank(accountName) && accountIsAccessible) {
             eventQuery += ' AND (' + sanitizeOrLikeList(accountName, 'Event__r.Account__r.Name') + ') ';
         }
 
@@ -540,7 +550,8 @@ global with sharing class SummitEventsFeed {
         }, 'Searches all the fields listed in options as a like statement allowing for a broader search of location information. (&filter= single or coma separated list of these items)'));
 
         //filter-Location
-        allOptions.add(makeOption('account', new List<String>{}, 'Filter events on the name of an account associated to the event via the account lookup field.'));
+        allOptions.add(makeOption('account', new List<String>{
+        }, 'Filter events on the name of an account associated to the event via the account lookup field.'));
 
         //filter-Building
         allOptions.add(makeOption('building', getObjectItemList(Summit_Events__c.Building__c.getDescribe()), 'Filter searches with a like statement all of these items. (&building= single or coma separated list of these items)'));
