Question display style now works full, third, half.

--- a/force-app/main/default/classes/SummitEventsAdditionalQuestionsCtlr.cls
+++ b/force-app/main/default/classes/SummitEventsAdditionalQuestionsCtlr.cls
@@ -45,6 +45,7 @@ public with sharing class SummitEventsAdditionalQuestionsCtlr {
         public String secondaryNoResults { get; set; }
         public String setupError { get; set; }
         public Boolean setupFail { get; set; }
+        public String displayStyle { get; set; }
     }
 
     public class queryReturn {
@@ -102,7 +103,7 @@ public with sharing class SummitEventsAdditionalQuestionsCtlr {
                     SELECT Name, Question_Label__c, Question_Field_Type__c, Default_Value__c, Registrant_Type__c, Instructions__c, Help_Text__c, Display_Order__c,
                             Map_to_Field__c, Picklist_Values__c, Text_Limit__c, Controlling_Question__c, Controlling_Logic__c, Required__c, Is_Visible__c, Error_Assist_Text__c,
                             Lookup_Object__c, Lookup_Fields__c, Lookup_Where_Clause__c, Lookup_No_Results_Label__c, Lookup_Secondary_Input_Link_Text__c, Lookup_Secondary_Value_Field__c,
-                            Lookup_Secondary_Input_Instructions__c, Lookup_Results_Icon__c, Existing_Picklist_Values__c
+                            Lookup_Secondary_Input_Instructions__c, Lookup_Results_Icon__c, Existing_Picklist_Values__c, Display_Style__c
                     FROM Summit_Events_Question__c
                     WHERE Event__c = :eventInformation.eventId
                     AND (Registrant_Type__c = 'Registrant' OR Registrant_Type__c = 'Registrant and Guest')
@@ -139,6 +140,14 @@ public with sharing class SummitEventsAdditionalQuestionsCtlr {
                     quest.setupError = '';
                     String mapToField = '';
                     String lookupObject = '';
+
+                    if(String.isBlank(question.Display_Style__c)) {
+                        quest.displayStyle = 'slds-large-size_3-of-6';
+                    } else if (question.Display_Style__c.equalsIgnoreCase('full width')) {
+                        quest.displayStyle = 'slds-large-size_6-of-6';
+                    } else if (question.Display_Style__c.equalsIgnoreCase('third width')) {
+                        quest.displayStyle = 'slds-large-size_2-of-6';
+                    }
 
                     //Make sure this is really a field
                     if (String.isBlank(question.Map_to_Field__c)) {
