Added title instance/event to Rest API

--- a/force-app/main/default/classes/SummitEventsFeed.cls
+++ b/force-app/main/default/classes/SummitEventsFeed.cls
@@ -15,6 +15,8 @@ global with sharing class SummitEventsFeed {
     public class eventItem {
         public String ID { get; set; }
         public String title { get; set; }
+        public String title_event { get; set; }
+        public String title_instance { get; set; }
         public String instanceDesc { get; set; }
         public String description { get; set; }
         public String longDesc { get; set; }
@@ -99,7 +101,7 @@ global with sharing class SummitEventsFeed {
 
         //Check if account is accessible
         Boolean accountIsAccessible = false;
-        if (Schema.sObjectType.Account.isAccessible()) {
+        if (Schema.SObjectType.Account.isAccessible()) {
             accountIsAccessible = true;
         }
 
@@ -293,12 +295,15 @@ global with sharing class SummitEventsFeed {
 
             if (eventInstance.Event__r.Event_Name__c != null) {
                 evt.title = seaShared.removeHTMLandEscape(eventInstance.Event__r.Event_Name__c, true);
+                evt.title_event = seaShared.removeHTMLandEscape(eventInstance.Event__r.Event_Name__c, true);
             } else {
                 evt.title = seaShared.removeHTMLandEscape(eventInstance.Event__r.Name, true);
+                evt.title_event = seaShared.removeHTMLandEscape(eventInstance.Event__r.Name, true);
             }
 
-            if (eventInstance.Instance_Title__c != null) {
+            if (String.isNotBlank(eventInstance.Instance_Title__c)) {
                 evt.title += ' - ' + seaShared.removeHTMLandEscape(eventInstance.Instance_Title__c, true);
+                evt.title_instance = seaShared.removeHTMLandEscape(eventInstance.Instance_Title__c, true);
             }
 
             if (String.isNotBlank(eventInstance.Instance_Short_Description__c)) {
