Used shared isEventClosed method for feed

--- a/force-app/main/default/classes/SummitEventsFeed.cls
+++ b/force-app/main/default/classes/SummitEventsFeed.cls
@@ -113,7 +113,7 @@ global with sharing class SummitEventsFeed {
         eventQuery += ' Building_Override__c, Alternate_Registration_URL_Override__c, Location_Address_Override__c, Location_Map_Link_Override__c, Location_Title_Override__c, Location_Type_Override__c,  ';
         eventQuery += ' Event__r.Event_Short_Listing_Description__c, Event__r.Audience__c, Event__r.Close_Event_Days_Before__c, Event__r.Event_Sponsor__c, ';
         eventQuery += ' Event__r.Feed_Registration_Button_Text__c, Feed_Registration_Button_Text_Override__c, Capacity__c, Current_Available_Capacity__c, Private_Instance__c, Event__r.Private_Event__c, ';
-        eventQuery += ' Instance_Start_Date__c, Instance_End_Date__c, Instance_Start_Time__c, Instance_End_Time__c, Instance_Time_Zone__c ';
+        eventQuery += ' Instance_Start_Date__c, Instance_End_Date__c, Instance_Start_Time__c, Instance_End_Time__c, Instance_Time_Zone__c, Registration_Close_Date__c, Registration_Close_Time__c   ';
         if (accountIsAccessible) {
             eventQuery += ' , Event__r.Account__r.Name ';
         }
@@ -136,8 +136,6 @@ global with sharing class SummitEventsFeed {
         if (hideClosed) {
             eventQuery += ' AND (Current_Available_Capacity__c > 0 OR Capacity__c = null) ';
         }
-
-
         // build and sanitize the where statement that have variables
 
         // get start and end view times convert string to datetime then convert back into string to sanitize
@@ -237,7 +235,6 @@ global with sharing class SummitEventsFeed {
             String programFields = 'Event__r.Program_Filter__c,Event__r.Program_Filter_2__c,Event__r.Program_Filter_3__c';
             eventQuery += ' AND (' + sanitizeOrLikeList(program, programFields) + ') ';
         }
-
 
         //School filter (can be comma separated)
         String school = req.params.get('school');
@@ -419,7 +416,7 @@ global with sharing class SummitEventsFeed {
                 evt.locationMapLink = '';
             }
 
-            if (evt.start < regDateOpenDate || eventInstance.Current_Available_Capacity__c <= 0) {
+            if (seaShared.isEventClosed(eventInstance)) {
                 evt.eventClosed = true;
                 evt.eventUrl = 'javascript:;';
                 evt.className = 'eventClosed';
